--- a/static/sass/_theme.scss
+++ b/static/sass/_theme.scss
@@ -1241,7 +1241,7 @@ a[href].tag-inline:not(.tag-borderless),
 	border-inline-end: none;
 }
 .tag-social--boost {
-	color: #018901;
+	color: #006000;
 	background-color: #e4f7e4;
 }
 .tag-social--like {
@@ -1249,7 +1249,7 @@ a[href].tag-inline:not(.tag-borderless),
 	background-color: #ffeded;
 }
 .tag-social--view {
-	color: #4f5285;
+	color: #434574;
 	background-color: #e4e4f1;
 }
 .tag-social--reply {
